# rayTracer

./: :w  CMakeLists.txt  boxScene.xml  notes.txt  questions.txt  readme.txt  scene.xml  times.txt
assets/: scene.xml  simpleScene.xml
src/: Materials.cpp  Materials.h  Plane.cpp  Sphere.cpp  TriObj.cpp  lights.h  main.cpp  materials.cpp  materials.h  objects.h  photonmap.h  renderer.cpp  renderer.h  rng.h  scene.h  texture.cpp  texture.h  viewport.cpp  xmlload.cpp  xmlload.h
src/cyCore/: cyColor.h  cyMatrix.h
